--- a/news_backup.html
+++ b/news_backup.html
@@ -1,5 +1,31 @@
 <tr>
     <td style="width:20%">
+    <p class="fs-5">
+        Jun., 2025
+    </p>
+    </td>
+    <td>
+    <p class="fs-5">
+        &#129299; I serve as Area Chair for <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>.
+    </p>
+    </td>
+</tr>
+
+<tr>
+    <td style="width:20%">
+    <p class="fs-5">
+        May 12th, 2025
+    </p>
+    </td>
+    <td>
+    <p class="fs-5">
+        &#128591; Honored to be recognized as <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer" style="color:black">Outstanding Reviewer</a> at CVPR 2025.
+    </p>
+    </td>
+</tr>
+
+<tr>
+    <td style="width:20%">
         <p class="fs-5">
             Apr. 5th, 2025
         </p>
