--- a/index.html
+++ b/index.html
@@ -99,6 +99,20 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Dec. 18th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  🧑🏻‍🏫 I gave a talk on "Object 6D pose estimation with vision and language" at the University of Catania, Italy. Thanks to <a href="http://scholar.google.it/citations?hl=it&user=_W8TnNgAAAAJ&view_op=list_works&authuser=1&sortby=pubdate" style="color:black">Francesco Ragusa</a> and <a href="https://www.dmi.unict.it/~gfarinella/" style="color:black"></a>Giovanni M. Farinella</a> for the invitation.
+                </p>
+              </td>
+            </tr>
+
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Nov. 13, 2025
                 </p>
               </td>
@@ -112,7 +126,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  OCt., 2025
+                  Oct., 2025
                 </p>
               </td>
               <td>
@@ -209,32 +223,6 @@
               <td>
                 <p class="fs-5">
                   &#129352; <a href="https://jcorsetti.github.io/fun3du/" style="color:black">Fun3DU</a> is the "second best method" in task-driven affordance grounding at the <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6121" style="color:black">SceneFun3D Challenge 2025</a>.
-                </p>
-              </td>
-            </tr>
-
-            <tr>
-              <td style="width:20%">
-                <p class="fs-5">
-                  Jun., 2025
-                </p>
-              </td>
-              <td>
-                <p class="fs-5">
-                  &#129299; I serve as Area Chair for <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>.
-                </p>
-              </td>
-            </tr>
-
-            <tr>
-              <td style="width:20%">
-                <p class="fs-5">
-                  May 12th, 2025
-                </p>
-              </td>
-              <td>
-                <p class="fs-5">
-                  &#128591; Honored to be recognized as <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer" style="color:black">Outstanding Reviewer</a> at CVPR 2025.
                 </p>
               </td>
             </tr>
