--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  🧑🏻‍🏫 I gave a talk on "Object 6D pose estimation with vision and language" at the University of Catania, Italy. Thanks to <a href="http://scholar.google.it/citations?hl=it&user=_W8TnNgAAAAJ&view_op=list_works&authuser=1&sortby=pubdate" style="color:black">Francesco Ragusa</a> and <a href="https://www.dmi.unict.it/~gfarinella/" style="color:black">Giovanni M. Farinella</a> for the invitation.
+                  🧑🏻‍🏫 I gave a talk on "Object 6D pose estimation with vision and language" at the University of Catania, Italy. Thanks to <a href="http://scholar.google.it/citations?hl=it&user=_W8TnNgAAAAJ&view_op=list_works&authuser=1&sortby=pubdate" style="color:black">Francesco Ragusa</a> and <a href="https://www.dmi.unict.it/~gfarinella/" style="color:black">Giovanni Maria Farinella</a> for the invitation.
                 </p>
               </td>
             </tr>
