--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Dec. 18th, 2025
+                  Dec. 18, 2025
                 </p>
               </td>
               <td>
@@ -165,7 +165,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Jul. 29th, 2025
+                  Jul. 29, 2025
                 </p>
               </td>
               <td>
@@ -178,7 +178,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Jul. 25th, 2025
+                  Jul. 25, 2025
                 </p>
               </td>
               <td>
@@ -191,7 +191,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Jun. 16th, 2025
+                  Jun. 16, 2025
                 </p>
               </td>
               <td>
@@ -204,7 +204,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Jun. 11th, 2025
+                  Jun. 11, 2025
                 </p>
               </td>
               <td>
@@ -217,7 +217,7 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
-                  Jun. 10th, 2025
+                  Jun. 10, 2025
                 </p>
               </td>
               <td>
