--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Feb. 24, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128227; A new technical report is out! Check out <a href="https://arxiv.org/abs/2602.19719" style="color:black">Flose</a>, the first Rectified Point Flow model for object 6D pose estimation.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Dec. 18, 2025
                 </p>
               </td>
