Added scrollable News

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="publications.html">Publications</a>
             </li>
@@ -33,67 +30,44 @@
     </nav>
 
     <div class="container my-5" style="max-width:1000px">
-      <!-- <div class="col-lg-8 px-0"> -->
-      <!-- <div class="w-50 p-3"> -->
 
+      <!-- Mobile -->
+      <div class="d-md-none row" style="margin-top:-25pt">
+        <h1>Hi! &#128075;</h1>
+        <img class="img-fluid w-100" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
+        <p></p>
+        <p class="fs-5">
+          I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+          of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
+          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
+          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+        </p>
+        <p class="fs-5">
+          If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
+          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+        </p>
+      </div>
 
+      <!-- Tablet and Desktop -->
+      <div class="d-none d-md-block d-lg-block row">
+        <h1>Hi! &#128075;</h1>
+        <p class="fs-5">
+          I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+          of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
+          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
+          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+        </p>
+        <p class="fs-5">
+          If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
+          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+        </p>
+      </div>
 
-        <!-- Mobile -->
-        <div class="d-md-none row" style="margin-top:-25pt">
-          <h1>Hi! &#128075;</h1>
-          <img class="img-fluid w-100" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
-          <p></p>
-          <p class="fs-5">
-            I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
-            of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-            My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-            I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
-          </p>
-          <p class="fs-5">
-            If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-            or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
-          </p>
-        </div>
+      <div class="col-xs-12" style="height:50px;"></div>
 
-        <!-- Tablet and Desktop -->
-        <div class="d-none d-md-block d-lg-block row">  <!-- d-none d-md-block d-lg-block -->
-          <!-- <div class="col-8">
-            <h1>Hi! &#128075;</h1>
-            <p class="fs-5">
-              I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
-              of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-              My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-              I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
-            </p>
-            <p class="fs-5">
-              If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-              or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
-            </p>
-          </div>
-          <div class="col-4">
-            <img class="img-fluid w-100" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
-          </div> -->
-          <h1>Hi! &#128075;</h1>
-          <p class="fs-5">
-            I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
-            of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-            My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-            I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
-          </p>
-          <p class="fs-5">
-            If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-            or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
-          </p>
-        </div>
-
-
-
-        <!-- <hr class="col-1 my-4"> -->
-        <div class="col-xs-12" style="height:50px;"></div>
-
-        <h3>News</h3>
-
-        <table class="table">
+      <h3>News</h3>
+      <div style="max-height: 400px; overflow-y: auto; border-bottom: 1px solid #dee2e6;">
+        <table class="table table-borderless">
           <tbody>
 
             <tr>
@@ -121,7 +95,6 @@
                 </p>
               </td>
             </tr>
-
 
             <tr>
               <td style="width:20%">
@@ -240,23 +213,115 @@
               </td>
             </tr>
 
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Jun., 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129299; I serve as Area Chair for <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  May 12th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128591; Honored to be recognized as <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer" style="color:black">Outstanding Reviewer</a> at CVPR 2025.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Apr. 5th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; <a href="https://jcorsetti.github.io/fun3du/" style="color:black">Fun3DU</a> has been selected as an <a href="https://cvpr.thecvf.com/virtual/2025/poster/33812" style="color:black">highlight poster</a> at CVPR 2025.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Dec., 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129351; FreeZeV2.1 is the "overall best method" in both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Nov. 22, 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128227; I gave a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
+                  Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Nov. 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training.
+                  Check out the <a href="https://3d-cops.github.io/" style="color:black">project page</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Oct. 2024
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
+                </p>
+              </td>
+            </tr>
+
           </tbody>
         </table>
+      </div>
 
-        <!-- <hr class="col-1 my-4"> -->
-        <div class="col-xs-12" style="height:50px;"></div>
+      <div class="col-xs-12" style="height:50px;"></div>
 
-        <h3>Contacts</h3>
-        <address>
-            <a href="https://www.fbk.eu/en" style="color:black"><strong>Bruno Kessler Foundation</strong></a><br>
-            <a href="https://tev.fbk.eu/home" style="color:black">Technologies of Vision Lab</a><br>
-            Via Sommarive 18<br>
-            38123 Povo, Trento, Italy<br>
-            Phone: (+39) 0461 314525<br>
-            Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
-        </address>
+      <h3>Contacts</h3>
+      <address>
+          <a href="https://www.fbk.eu/en" style="color:black"><strong>Bruno Kessler Foundation</strong></a><br>
+          <a href="https://tev.fbk.eu/home" style="color:black">Technologies of Vision Lab</a><br>
+          Via Sommarive 18<br>
+          38123 Povo, Trento, Italy<br>
+          Phone: (+39) 0461 314525<br>
+          Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
+      </address>
 
-      <!-- </div> Constraint the page width -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
