--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p class="fs-5">
           I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation and 3D functionality segmentation.
+          I have been a pioneer of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
         </p>
         <p class="fs-5">
           If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
@@ -54,8 +54,8 @@
         <p class="fs-5">
           I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation.
-          I have been a pioneer in the field of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
+          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation and 3D functionality segmentation.
+          I have been a pioneer of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
         </p>
         <p class="fs-5">
           If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
@@ -66,7 +66,7 @@
       <div class="col-xs-12" style="height:50px;"></div>
 
       <h3>News</h3>
-      <div style="max-height: 400px; overflow-y: auto; border-bottom: 1px solid #dee2e6;">
+      <div style="max-height: 360px; overflow-y: auto; border-bottom: 1px solid #dee2e6;">
         <table class="table table-borderless">
           <tbody>
 
