--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  🎉 Happy to share that I've obtained the National Italian Habilitation (Abilitazione Scientifica Nazionale) as Associate Professor in Informatics (01/B1).
+                  🎉 Happy to share that I've obtained the Italian National Scientific Qualification (ASN) as Associate Professor in Informatics (01/B1).
                 </p>
               </td>
             </tr>
