--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  📖 Our paper <a href="https://arxiv.org/abs/2406.16384" style="color:black">Horyon</a> has been accepted for publication in TPAMI.
+                  📖 Our paper <a href="https://arxiv.org/abs/2406.16384" style="color:black">Horyon</a> has been accepted for publication in IEEE TPAMI.
                 </p>
               </td>
             </tr>
