--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
+      <div class="container" style="max-width:1000px">
         <a class="navbar-brand">Davide <strong>Boscaini</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -40,6 +40,8 @@
           I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
           of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
           My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation and 3D functionality segmentation.
+        </p>
+        <p class="fs-5">
           I have been a pioneer of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
         </p>
         <p class="fs-5">
@@ -49,18 +51,33 @@
       </div>
 
       <!-- Tablet and Desktop -->
-      <div class="d-none d-md-block d-lg-block row">
-        <h1>Hi! &#128075;</h1>
-        <p class="fs-5">
-          I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
-          of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
-          My research interests are in 3D perception and understanding, with a focus on object 6D pose estimation and 3D functionality segmentation.
-          I have been a pioneer of <a href="https://geometricdeeplearning.com" style="color:black">Geometric deep learning</a>.
-        </p>
-        <p class="fs-5">
-          If you want to know more about me, you can have a look at my <a href="data/cv.pdf" style="color:black">cv</a>
-          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
-        </p>
+      <div class="d-none d-md-block d-lg-block">
+        <div class="row align-items-start">
+          
+          <div class="col-md-8">
+            <h1>Hi! &#128075;</h1>
+            <p class="fs-5">
+              I am a tenure-track research scientist at the <a href="https://tev.fbk.eu" style="color:black">Technologies of Vision Lab</a>
+              of the <a href="https://www.fbk.eu/en" style="color:black">Bruno Kessler Foundation</a> in Trento, Italy.
+            </p>
+            <p class="fs-5">
+              I specialize in 3D perception and understanding, with a focus on object 6D pose estimation and 3D functionality segmentation.
+            </p>
+            <p class="fs-5">
+              During my PhD, I pioneered <a href="https://geometricdeeplearning.com" style="color:black">Geometric Deep Learning</a>
+              with <a href="https://www.cs.ox.ac.uk/people/michael.bronstein/" style="color:black">Michael Bronstein</a> and <a href="https://scholar.google.com/citations?user=HwDTzQEAAAAJ&hl=en" style="color:black">Jonathan Masci</a>.
+            </p>
+            <p class="fs-5">
+              For more details, please see my <a href="data/cv.pdf" style="color:black">CV</a>
+              or visit my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/" style="color:black">LinkedIn page</a>.
+            </p>
+          </div>
+
+          <div class="col-md-4 text-start">
+            <img class="img-fluid rounded" alt="Portrait by Mattia Nardon on December 4th, 2024" src="./data/portrait_241204_square.png">
+          </div>
+
+        </div>
       </div>
 
       <div class="col-xs-12" style="height:50px;"></div>
