--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
+      <div class="container" style="max-width:1000px">
         <a class="navbar-brand">Davide <strong>Boscaini</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,9 +22,6 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html">About</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link active" href="publications.html">Publications</a>
             </li>
